# ML_LaborTightnessRegimeShift

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
ml_labor_tightness_regime_shift/: __init__.py  dataset.py  features.py  plots.py
models/: 04_model_training_pre_post_predictions.csv  04_model_training_window_predictions.csv  05_forecast_benchmark_post_predictions.csv  05_forecast_benchmark_pre_post_predictions.csv  05_forecast_benchmark_window_predictions.csv  results_and_audit_regime_predictions.csv
notebooks/: 00_data_acquistion.ipynb  00_data_acquistion.py  00_data_build.ipynb  01_data_cleaning.ipynb  01_data_cleaning.py  01_exploratory_data_analysis.ipynb  02_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_baseline_models.ipynb  03_feature_engineering.ipynb  04_baseline_model.ipynb  04_break_detection.ipynb  04_structural_benchmark.ipynb  05_advanced_models.ipynb  05_forecast_benchmark.ipynb  06_hyperparameter_tuning.ipynb  06_result_and_analysis.ipynb  07_error_analysis.ipynb
regime_shift/: __init__.py  config.py  data.py  features.py  preprocessing.py
reports/: 01_adf_tests.csv  01_enhanced_phillips_curve.csv  01_feature_vif.csv  01_inflation_regime.csv  01_lag_analysis.csv  01_mean_shift_tests.csv  01_missing_values.csv  01_model_diagnostics.csv  01_outlier_analysis.csv  01_phillips_curve.csv  01_predictive_models.csv  01_quandt_lr_test.csv  01_structural_breaks_chow.csv  01_summary_audit.csv  01_tightness_regime.csv  01_wage_regime.csv  02_core_feature_correlation.csv  02_core_feature_set.csv  02_drop_sparse.csv  02_feature_diagnostic.csv  02_feature_summary.csv  02_final_feature_list.csv  02_high_correlation.csv  02_horizon_data.csv  02_keep_feature.csv  02_leak_report.csv  02_regime_count.csv  02_scale_data.csv  02_vif_data.csv  (+125 more)
(+22 files in other folders)
