[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "regime-shift"
version = "0.0.1"
description = "Detect regime shifts in the predictive relationship between labor market tightness and future wage growth, with a focus on the post-2020 structural break."
authors = [
  { name = "Sumaitat Ebshar" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["regime-shift"]
include = ["pyproject.toml", "regime-shift/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["regime-shift"]
force-sort-within-sections = true

