[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "regime_shift"
version = "0.0.1"
description = "Detect regime shifts in the predictive relationship between labor market tightness and future wage growth, with a focus on the post-2020 structural break."
authors = [
  { name = "Sumaitat Ebshar" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "pandas",
    "numpy",
    "scikit-learn",
    "openpyxl",
    "pyarrow",
    "scipy",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "plotly",
    "arch",
    "pmdarima",
    "jupyter",
    "jupyterlab",
    "fredapi",
]
requires-python = "~=3.11.0"